examples/k8svalidator.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: networkpolicy-validator
webhooks:
- clientConfig:
    caBundle: "cabundle"
    url: https://127.0.0.1:8443/networkpolicies
  failurePolicy: Fail
  name: networking.karepol.io
  namespaceSelector: {}
  rules:
  - apiGroups:
    - networking.k8s.io
    - extensions
    apiVersions:
    - v1
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - networkpolicies
